# Alfred

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.opencode/plans/: fix_syntax_error.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  deny.toml  i18n.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/en-US/: alfred.ftl  inchbox.ftl
src-tauri/i18n/zh-CN/: alfred.ftl  inchbox.ftl
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  lib.rs  main.rs  models.rs  thumbnail.rs
src-tauri/wix/locales/: en-US.wxl  zh-CN.wxl
src/components/: ContextMenu.vue  FileLibrary.vue  FileTagEditor.vue  FileThumbnail.vue  FilterPanel.vue  GlobalDragOverlay.vue  NotificationContainer.vue  NotificationToast.vue  PreviewModal.vue  ShortcutBar.vue  SideBar.vue  TopBar.vue  WindowControls.vue
src/components/topbars/: LibraryTopBar.vue  SettingsTopBar.vue  TagsTopBar.vue
src/composables/: useThumbnailCache.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/router/: index.ts
src/stores/: library.ts  notification.ts
src/types/: epubjs.d.ts
src/views/: LibraryView.vue  SettingView.vue  TagManageView.vue
