[package]
name = "alfred"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alfred_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
clipboard-win = "5.4.1"
mime_guess = "2.0.5"
dirs = "6.0.0"
open = "5.3.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = "8.0"
fluent = "0.16"
unic-langid = "0.9"
sys-locale = "0.3"
once_cell = "1.19"
image = "0.25"
pdfium-render = "0.8.37"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
] }

